Bug 1382306 - Create async function wrapper when instantiating module functions. r=jonco

--HG--
extra : rebase_source : 7b6d30dbbdf5cdf798d793ed03969c97585860f8
extra : histedit_source : 536aece9fa182d1cf4912a5c9b819207b3ccdffc