js/src/tests/ecma_2017/AsyncFunctions/async-function-declaration-in-modules.js
@@ -1,0 +1,13 @@
+// |reftest| module
+
+async function f() {
+    return "success";
+}
+
+var AsyncFunction = (async function(){}).constructor;
+
+assertEq(f instanceof AsyncFunction, true);
+
+f().then(v => {
+    reportCompare("success", v);
+});
